--- a/Memories.html
+++ b/Memories.html
@@ -28,8 +28,10 @@
               <p class="ly-stxt04">segala urusannya dipermudah,</p>
               <p class="ly-stxt05">pahalanya terus ditambah,</p>
               <p class="ly-stxt06">dilancarkan rezekinya,</p>
-              <p class="ly-stxt07">disegerakan semua keinginannya</p>
-              <p class="ly-stxt08">Aamiin ya Allah</p>
+              <p class="ly-stxt07">Aamiin ya Allah</p>
+            </div>
+            <div class="ly-box02">
+              <p class="ly-stxt08">Scroll terus ke bawah yaa :)</p>
             </div>
         </div>
       </div>
@@ -37,120 +39,112 @@
       <!--第二屏-->
 
       <div class="section">
-          <div class="timeline"></div>
-          <div class="timepoint11"></div>
-          <div class="ly-box11">
-              <div class="ly-txt11">
-                09-09-2021
-            </div>
-              <div class="ly-txt12">
-                  Kamu kirim pap ini
-              </div>
-              <div class="ly-imgbox11">
-                <img class="ly-img11" src="img/img_1.jpeg">
-              </div>
-          </div>
-          <div class="ly-triangle11"></div>
-
-          <div class="ly-box12">
-              <div class="ly-txt13">
-                  Cantik emang
-              </div>
-              <div class="ly-txt14">
-                 <p>Tapi...</p>
-                 <p>sayang sih....</p>
-			     <p>Belum bisa dimiliki</p>
-                 <p>HAHAHAHAHA</p>
-              </div>
-          </div>
-          <div class="ly-triangle12"></div>
-      </div>
-
-      <!--第三屏-->
-
-      <div class="section">
-          <div class="timeline"></div>
-          <div class="timepoint21"></div>
-          <div class="ly-box21">
-              <div class="ly-txt21">
-                10-09-2021
-            </div>
-              <div class="ly-txt22">
-                 <p>Emang gak kerasa</p>
-                 <p>makin tua aja kamu</p>
-                 <p>makin cantik juga sih</p>
-              </div>
-              <div class="ly-imgbox21">
-                <img class="ly-img21" src="img/img_2.jpeg">
-              </div>
-          </div>
-          <div class="ly-triangle21"></div>
-
-          <div class="ly-box22">
-              <div class="ly-txt23">
-                  Sumpahhh
-              </div>
-              <div class="ly-txt24">
-                  <p> Ini cantik bangett</p>
-              </div>
-              <div class="ly-imgbox22">
-                <img class="ly-img22" src="img/img_3.jpg">
-              </div>
-          </div>
-          <div class="ly-triangle22"></div>
-          <div class="ly-triangle23"></div>
-      </div>
-
-      <!--第四屏-->
-
-      <div class="section">
-          <div class="timeline"></div>
-          <div class="timepoint31"></div>
-          <div class="ly-box31">
-              <div class="ly-txt31">
-                  Happy Birthday ya :)
-              </div>
-              <div class="ly-imgbox31">
-                <img class="ly-img31" src="img/img_5.jpeg">
-              </div>
-          </div>
-          <div class="ly-triangle31"></div>
-
-          <div class="ly-box32">
-              <div class="ly-txt33">
-                  Semoga cepet nikah :)))
-              </div>
-              <div class="ly-txt34">
-                 <p>hehehehe</p>
-              </div>
-              <div class="ly-imgbox31">
-                <img class="ly-img31" src="img/img_6.jpg">
-              </div>
-          </div>
-          <div class="ly-triangle32"></div>
-      </div>
-
-      <div class="section">
         <div class="timeline"></div>
-        <div class="timepoint31"></div>
-        <div class="ly-box31">
-            <div class="ly-txt31">
-                <p>Sekali lagi, selamat ngolotan yaa</p>
-                <p>Pokoknya makin +++</p>
-                <p>Inget, kamu dah tua</p>
-                <p>makanya buruan nikah wkwkk</p>
-                Cuek nya rada di kurang-kurangin ya, ren hahaha
+        <div class="timepoint11"></div>
+        <div class="ly-box11">
+            <div class="ly-txt11">
+              Gemesin banget ya kamu :)
             </div>
-            <div class="ly-imgbox31">
-              <img class="ly-img31" src="img/img_4.jpg">
+            <div class="ly-txt12">
+                Coba liat deh
+            </div>
+            <div class="ly-imgbox11">
+              <img class="ly-img11" src="img/img (1).jpeg">
             </div>
         </div>
-        <div class="ly-triangle31"></div>
+        <div class="ly-triangle11"></div>
     </div>
 
+    <div class="section">
+        <div class="timeline"></div>
+        <div class="timepoint11"></div>
+        <div class="ly-box11">
+            <div class="ly-txt11">
+              Gemesin banget ya kamu :)
+            </div>
+            <div class="ly-txt12">
+                Coba liat deh
+            </div>
+            <div class="ly-imgbox11">
+              <img class="ly-img11" src="img/img (1).jpeg">
+            </div>
+        </div>
+        <div class="ly-triangle11"></div>
+    </div>
 
-       </div>
-  <!--动态方块-->
+    
+    <div class="section">
+      <div class="timeline"></div>
+      <div class="timepoint11"></div>
+      <div class="ly-box11">
+          <div class="ly-txt11">
+            Gemesin banget ya kamu :)
+          </div>
+          <div class="ly-txt12">
+              Coba liat deh
+          </div>
+          <div class="ly-imgbox11">
+            <img class="ly-img11" src="img/img (1).jpeg">
+          </div>
+      </div>
+      <div class="ly-triangle11"></div>
+   </div>
+
+  
+   <div class="section">
+    <div class="timeline"></div>
+    <div class="timepoint11"></div>
+    <div class="ly-box11">
+        <div class="ly-txt11">
+          Gemesin banget ya kamu :)
+        </div>
+        <div class="ly-txt12">
+            Coba liat deh
+        </div>
+        <div class="ly-imgbox11">
+          <img class="ly-img11" src="img/img (2).jpeg">
+        </div>
+    </div>
+    <div class="ly-triangle11"></div>
+ </div>
+
+ 
+ <div class="section">
+  <div class="timeline"></div>
+  <div class="timepoint11"></div>
+  <div class="ly-box11">
+      <div class="ly-txt11">
+        Gemesin banget ya kamu :)
+      </div>
+      <div class="ly-txt12">
+          Coba liat deh
+      </div>
+      <div class="ly-imgbox11">
+        <img class="ly-img11" src="img/img (3).jpeg">
+      </div>
+  </div>
+  <div class="ly-triangle11"></div>
+</div>
+
+
+<div class="section">
+  <div class="timeline"></div>
+  <div class="timepoint11"></div>
+  <div class="ly-box11">
+      <div class="ly-txt11">
+        Gemesin banget ya kamu :)
+      </div>
+      <div class="ly-txt12">
+          Coba liat deh
+      </div>
+      <div class="ly-imgbox11">
+        <img class="ly-img11" src="img/img (4).jpeg">
+      </div>
+  </div>
+  <div class="ly-triangle11"></div>
+</div>
+
+  </div>
   <ul class="bg-bubbles">
       <li></li>
       <li></li>
