--- a/Memories.html
+++ b/Memories.html
@@ -49,7 +49,7 @@
                 Coba liat deh
             </div>
             <div class="ly-imgbox11">
-              <img class="ly-img11" src="img/img (1).jpeg">
+              <img class="ly-img11" src="img/a.jpeg">
             </div>
         </div>
         <div class="ly-triangle11"></div>
@@ -66,7 +66,7 @@
                 Coba liat deh
             </div>
             <div class="ly-imgbox11">
-              <img class="ly-img11" src="img/img (1).jpeg">
+              <img class="ly-img11" src="img/b.jpeg">
             </div>
         </div>
         <div class="ly-triangle11"></div>
@@ -84,7 +84,7 @@
               Coba liat deh
           </div>
           <div class="ly-imgbox11">
-            <img class="ly-img11" src="img/img (1).jpeg">
+            <img class="ly-img11" src="img/c.jpeg">
           </div>
       </div>
       <div class="ly-triangle11"></div>
@@ -102,7 +102,7 @@
             Coba liat deh
         </div>
         <div class="ly-imgbox11">
-          <img class="ly-img11" src="img/img (2).jpeg">
+          <img class="ly-img11" src="img/d.jpeg">
         </div>
     </div>
     <div class="ly-triangle11"></div>
@@ -120,7 +120,7 @@
           Coba liat deh
       </div>
       <div class="ly-imgbox11">
-        <img class="ly-img11" src="img/img (3).jpeg">
+        <img class="ly-img11" src="img/e.jpeg">
       </div>
   </div>
   <div class="ly-triangle11"></div>
@@ -138,7 +138,92 @@
           Coba liat deh
       </div>
       <div class="ly-imgbox11">
-        <img class="ly-img11" src="img/img (4).jpeg">
+        <img class="ly-img11" src="img/f.jpeg">
+      </div>
+  </div>
+  <div class="ly-triangle11"></div>
+</div>
+
+<div class="section">
+  <div class="timeline"></div>
+  <div class="timepoint11"></div>
+  <div class="ly-box11">
+      <div class="ly-txt11">
+        Gemesin banget ya kamu :)
+      </div>
+      <div class="ly-txt12">
+          Coba liat deh
+      </div>
+      <div class="ly-imgbox11">
+        <img class="ly-img11" src="img/g.jpeg">
+      </div>
+  </div>
+  <div class="ly-triangle11"></div>
+</div>
+
+<div class="section">
+  <div class="timeline"></div>
+  <div class="timepoint11"></div>
+  <div class="ly-box11">
+      <div class="ly-txt11">
+        Gemesin banget ya kamu :)
+      </div>
+      <div class="ly-txt12">
+          Coba liat deh
+      </div>
+      <div class="ly-imgbox11">
+        <img class="ly-img11" src="img/h.jpeg">
+      </div>
+  </div>
+  <div class="ly-triangle11"></div>
+</div>
+
+<div class="section">
+  <div class="timeline"></div>
+  <div class="timepoint11"></div>
+  <div class="ly-box11">
+      <div class="ly-txt11">
+        Gemesin banget ya kamu :)
+      </div>
+      <div class="ly-txt12">
+          Coba liat deh
+      </div>
+      <div class="ly-imgbox11">
+        <img class="ly-img11" src="img/i.jpeg">
+      </div>
+  </div>
+  <div class="ly-triangle11"></div>
+</div>
+
+<div class="section">
+  <div class="timeline"></div>
+  <div class="timepoint11"></div>
+  <div class="ly-box11">
+      <div class="ly-txt11">
+        Jadi jagoan aku terus yaaa :D
+      </div>
+      <div class="ly-txt12">
+          Jangan kegoda sama yang lain
+      </div>
+      <div class="ly-imgbox11">
+        <img class="ly-img11" src="img/j.jpeg">
+      </div>
+  </div>
+  <div class="ly-triangle11"></div>
+</div>
+
+<div class="section">
+  <div class="timeline"></div>
+  <div class="timepoint11"></div>
+  <div class="ly-box11">
+      <div class="ly-txt11">S
+       Btw, sekali lagi <b>Selamat Ulang Tahun ya Sayang :)</b>
+      </div>
+      <div class="ly-txt12">
+          I love U 
+      </div>
+      <div class="ly-imgbox11">
+        <img class="ly-img11" src="img/k.jpeg">
       </div>
   </div>
   <div class="ly-triangle11"></div>
