--- a/Memories.html
+++ b/Memories.html
@@ -31,7 +31,7 @@
               <p class="ly-stxt07">Aamiin ya Allah</p>
             </div>
             <div class="ly-box02">
-              <p class="ly-stxt08">Scroll terus ke bawah yaa :)</p>
+              <p class="ly-stxt08"><i>Scroll terus ke bawah yaa cantik :)</i></p>
             </div>
         </div>
       </div>
