--- a/Memories.html
+++ b/Memories.html
@@ -225,6 +225,15 @@
   <div class="ly-triangle11"></div>
 </div>
 
+<div class="section">
+  <div>
+    <h4>Klik tombol love ini yaa cantik :)</h4>
+  </div>
+  <center>
+    <a href="https://wasap.at/F54mWb"><img width="100%" height="100%" src="img/heart-flat.png"/></a>
+  </center>
+</div>
+
   </div>
   <ul class="bg-bubbles">
       <li></li>
