--- a/Memories.html
+++ b/Memories.html
@@ -44,8 +44,8 @@
             <div class="ly-txt11">
               Gemesin banget ya kamu :)
             </div>
-            <div class="ly-imgbox1">
-              <img class="ly-img1" src="img/a.jpeg">
+            <div class="ly-imgbox11">
+              <img class="ly-img11" src="img/a.jpeg">
             </div>
         </div>
         <div class="ly-triangle11"></div>
@@ -212,11 +212,8 @@
   <div class="timeline"></div>
   <div class="timepoint11"></div>
   <div class="ly-box11">
-      <div class="ly-txt11">S
+      <div class="ly-txt11">
        Btw, sekali lagi <b>Selamat Ulang Tahun ya Sayang :)</b>
-      </div>
-      <div class="ly-txt12">
-          I love U 
       </div>
       <div class="ly-imgbox11">
         <img class="ly-img11" src="img/k.jpeg">
@@ -226,11 +223,11 @@
 </div>
 
 <div class="section">
-  <div>
-    <h4>Klik tombol love ini yaa cantik :)</h4>
+  <div class="ly-txt11">
+   Coba klik tombol love ini yaa sayang :)
   </div>
   <center>
-    <a href="https://wasap.at/F54mWb"><img width="100%" height="100%" src="img/heart-flat.png"/></a>
+    <a href="https://api.whatsapp.com/send?phone=6281284381417&text=Makasih%20ya%20sayang%20udah%20ngucapin%2C%20aaaa%20terharu%20banget%20akuu"><img width="100%" height="100%" src="img/heart-flat.png"/></a>
   </center>
 </div>
 
