--- a/Memories.html
+++ b/Memories.html
@@ -56,10 +56,10 @@
         <div class="timepoint11"></div>
         <div class="ly-box11">
             <div class="ly-txt11">
-              Gemesin banget ya kamu :)
+             Mau dipakein apapun kalo yang cantik pasti tetep cantik
             </div>
             <div class="ly-txt12">
-                Coba liat deh
+                hehehehe
             </div>
             <div class="ly-imgbox11">
               <img class="ly-img11" src="img/b.jpeg">
@@ -74,10 +74,10 @@
       <div class="timepoint11"></div>
       <div class="ly-box11">
           <div class="ly-txt11">
-            Gemesin banget ya kamu :)
+            Gak kerasa ya, sekarang kamu udah gede
           </div>
           <div class="ly-txt12">
-              Coba liat deh
+             udah 23 tahun aja
           </div>
           <div class="ly-imgbox11">
             <img class="ly-img11" src="img/c.jpeg">
@@ -92,10 +92,10 @@
     <div class="timepoint11"></div>
     <div class="ly-box11">
         <div class="ly-txt11">
-          Gemesin banget ya kamu :)
+          Di hari spesial kamu ini banyak yang pengen aku ungkapin
         </div>
         <div class="ly-txt12">
-            Coba liat deh
+           tapi gak mungkin semuanya di ucapin sekarang
         </div>
         <div class="ly-imgbox11">
           <img class="ly-img11" src="img/d.jpeg">
@@ -110,10 +110,10 @@
   <div class="timepoint11"></div>
   <div class="ly-box11">
       <div class="ly-txt11">
-        Gemesin banget ya kamu :)
+       Ada beberapa yang mungkin belum saatnya ku ucapin sekarang :)
       </div>
       <div class="ly-txt12">
-          Coba liat deh
+          hehehe
       </div>
       <div class="ly-imgbox11">
         <img class="ly-img11" src="img/e.jpeg">
@@ -128,10 +128,7 @@
   <div class="timepoint11"></div>
   <div class="ly-box11">
       <div class="ly-txt11">
-        Gemesin banget ya kamu :)
-      </div>
-      <div class="ly-txt12">
-          Coba liat deh
+        Intinya sekarang aku mau ucapin selamat ulang tahun ke kamu
       </div>
       <div class="ly-imgbox11">
         <img class="ly-img11" src="img/f.jpeg">
@@ -145,10 +142,10 @@
   <div class="timepoint11"></div>
   <div class="ly-box11">
       <div class="ly-txt11">
-        Gemesin banget ya kamu :)
+        Semoga makin hari makin sayang aku yaa :"
       </div>
       <div class="ly-txt12">
-          Coba liat deh
+          (pengennya sih gitu)
       </div>
       <div class="ly-imgbox11">
         <img class="ly-img11" src="img/g.jpeg">
@@ -162,10 +159,10 @@
   <div class="timepoint11"></div>
   <div class="ly-box11">
       <div class="ly-txt11">
-        Gemesin banget ya kamu :)
+        Semua urusan dan impiannya di perlancar
       </div>
       <div class="ly-txt12">
-          Coba liat deh
+          (termasuk skripsiannya)
       </div>
       <div class="ly-imgbox11">
         <img class="ly-img11" src="img/h.jpeg">
@@ -179,10 +176,10 @@
   <div class="timepoint11"></div>
   <div class="ly-box11">
       <div class="ly-txt11">
-        Gemesin banget ya kamu :)
+        Jangan buru-buru pengen nikah atau nyari yang lain
       </div>
       <div class="ly-txt12">
-          Coba liat deh
+          (mending tungguin aku aja :D)
       </div>
       <div class="ly-imgbox11">
         <img class="ly-img11" src="img/i.jpeg">
@@ -223,8 +220,8 @@
 </div>
 
 <div class="section">
-  <div class="ly-txt11">
-   Coba klik tombol love ini yaa sayang :)
+  <div class="ly-txt01">
+   Coba klik tombol love ini yaa cantik :)
   </div>
   <center>
     <a href="https://api.whatsapp.com/send?phone=6281284381417&text=Makasih%20ya%20sayang%20udah%20ngucapin%2C%20aaaa%20terharu%20banget%20akuu"><img width="30%" height="30%" src="img/heart-flat.png"/></a>
