--- a/Memories.html
+++ b/Memories.html
@@ -224,7 +224,8 @@
    Coba klik tombol love ini yaa cantik :)
   </div>
   <center>
-    <a href="https://api.whatsapp.com/send?phone=6281284381417&text=Makasih%20ya%20sayang%20udah%20ngucapin%2C%20aaaa%20terharu%20banget%20akuu"><img width="30%" height="30%" src="img/heart-flat.png"/></a>
+    <a href="https://api.whatsapp.com/send?phone=6281284381417&text=Makasih%20ya%20sayang%20udah%20ngucapin%2C%20aaaa%20terharu%20banget%20akuu%E2%9D%A3%EF%B8%8F%E2%9D%A3%EF%B8%8F">
+      <img width="30%" height="30%" src="img/heart-flat.png"/></a>
   </center>
 </div>
 
